simple-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-api-ing
  annotations:
    kubernetes.io/ingress.class: "nginx"
          #    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: srv02.tce.ma.gov.br
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: simple-api
              port:
                number: 3000
